k8s/calculator-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calculator-service
  namespace: fintechops
spec:
  replicas: 2
  selector:
    matchLabels:
      app: calculator-service
  template:
    metadata:
      labels:
        app: calculator-service
    spec:
      containers:
      - name: calculator-service
        image: 196390795701.dkr.ecr.ap-south-1.amazonaws.com/fintechops-dev:calculator-service-backend-latest
        ports:
        - containerPort: 6000
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: calculator-service
  namespace: fintechops
spec:
  selector:
    app: calculator-service
  ports:
  - port: 6000
    targetPort: 6000
  type: ClusterIP
