k8s/news-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: news-service
  namespace: fintechops
spec:
  replicas: 2
  selector:
    matchLabels:
      app: news-service
  template:
    metadata:
      labels:
        app: news-service
    spec:
      containers:
      - name: news-service
        image: 196390795701.dkr.ecr.ap-south-1.amazonaws.com/fintechops-dev:news-service-backend-latest
        ports:
        - containerPort: 5000
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: news-service
  namespace: fintechops
spec:
  selector:
    app: news-service
  ports:
  - port: 5000
    targetPort: 5000
  type: ClusterIP
