k8s/ingress-combined.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fintechops-all-ingress
  namespace: fintechops
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/healthcheck-path: /health
    alb.ingress.kubernetes.io/group.name: fintechops-shared
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /argocd
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            namespace: argocd
            port:
              number: 80
      - path: /api/auth
        pathType: Prefix
        backend:
          service:
            name: auth-service
            port:
              number: 3000
      - path: /api/market
        pathType: Prefix
        backend:
          service:
            name: market-data-service
            port:
              number: 4000
      - path: /api/news
        pathType: Prefix
        backend:
          service:
            name: news-service
            port:
              number: 5000
      - path: /api/calculators
        pathType: Prefix
        backend:
          service:
            name: calculator-service
            port:
              number: 6000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
